ignore another spring-url-mapping-hack from documentation